<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:backgroundTint="@color/ColorPrimary"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:id="@+id/appbar"
        >

        <com.google.android.material.appbar.MaterialToolbar
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/ColorPrimary"
            app:title="@string/app_name"
            app:menu="@menu/main_menu"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            android:id="@+id/toolbar"
            />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/appbar"
        android:layout_margin="1dp"
        android:id="@+id/recycler_view"
        android:visibility="visible"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/recycler_view_item"
        />
    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/not_found"
        android:visibility="gone"
        android:gravity="center"
        android:id="@+id/notFound"
        android:fontFamily="@font/comfortaa_bold"
        android:textSize="32sp"
        android:layout_centerInParent="true"
        />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/fab"
        android:elevation="10dp"
        android:layout_margin="16dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        app:fabCustomSize="66dp"
        android:src="@drawable/ic_baseline_person_add_24"
        app:maxImageSize="32dp"
        app:backgroundTint="@color/AccentColor"
        android:contentDescription="@string/todo" />


</RelativeLayout>